fixed spacing at top and bottom of main container

--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@ main {
     width: 35%;
     height: 50%;
     padding-top: 50px;
-    padding-bottom: 50px;
+    padding-bottom: 40px;
     padding-left: 45px;
     padding-right: 30px;
     border-radius: 30px;
@@ -57,6 +57,7 @@ button {
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background: transparent;
     border-radius: 7px;
+    margin-top: 15px;
     margin-bottom: 20px;
     color: #313638;
     border: 1px solid #313638;
